// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePassword component it matches the snapshot 1`] = `
<div
  className="container"
>
  <form
    className="white"
    id="loginFormChange"
    onSubmit={[Function]}
  >
    <div
      className="input-field"
    >
      <label
        htmlFor="password"
      >
         Current Password
      </label>
      <input
        id="password"
        name="oldPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="input-field"
    >
      <label
        htmlFor="password"
      >
         New Password
      </label>
      <input
        id="newPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="input-field"
    >
      <button
        className="btn purple darken-3 text-white"
        id="confirm"
      >
        Confirm
      </button>
    </div>
  </form>
</div>
`;

exports[`Feature component it matches the snapshot 1`] = `
<div
  className="container"
>
  <form
    className="white"
    id="loginFormChange"
    onSubmit={[Function]}
  >
    <div
      className="input-field"
    >
      <label
        htmlFor="password"
      >
         Current Password
      </label>
      <input
        id="password"
        name="oldPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="input-field"
    >
      <label
        htmlFor="password"
      >
         New Password
      </label>
      <input
        id="newPassword"
        onChange={[Function]}
        type="password"
      />
    </div>
    <div
      className="input-field"
    >
      <button
        className="btn purple darken-3 text-white"
        id="confirm"
      >
        Confirm
      </button>
    </div>
  </form>
</div>
`;

exports[`print the initial state 1`] = `
ChangePassword {
  "context": undefined,
  "handleChange": [Function],
  "handleSubmit": [Function],
  "props": undefined,
  "refs": Object {},
  "state": Object {
    "newPassword": "",
    "password": "",
  },
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;

exports[`print the state 1`] = `
ChangePassword {
  "context": undefined,
  "handleChange": [Function],
  "handleSubmit": [Function],
  "props": Object {
    "newPassword": "1234test",
    "password": "test1234",
  },
  "refs": Object {},
  "state": Object {
    "newPassword": "",
    "password": "",
  },
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;
